syntax = "proto3";
package hashicorp.nomad.client.logmon.proto;
option go_package = "proto";

service LogMon {
    rpc Start(StartRequest) returns (StartResponse) {}
    rpc Stop(StopRequest) returns (StopResponse) {}
}

message StartRequest {
    string log_dir = 1;
    string stdout_file_name = 2;
    string stderr_file_name = 3;
    uint32 max_files = 4;
    uint32 max_file_size_mb = 5;
    string stdout_fifo = 6;
    string stderr_fifo = 7;
    string file_extension = 8;
}

message StartResponse {
}

message StopRequest {}

message StopResponse {}
